ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <APP>-ingress
  namespace: <NAME_SPACE>
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: <APP>-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: pb-cms-notification-alb
    alb.ingress.kubernetes.io/subnets: subnet-xxxxxxxx, subnet-xxxxxxxx, subnet-xxxxxxxx
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <APP>-service
                port:
                  number: 80
